--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = plugins.settings
+DJANGO_SETTINGS_MODULE = plugins.test_settings
 addopts = --reuse-db --tb=short
-norecursedirs = .git .idea .vagrant plugins locale staticfiles mediafiles requirements static vagrant moodle moodledata phpu_moodledata
+norecursedirs = .git .idea .vagrant plugins locale node_modules staticfiles mediafiles requirements static vagrant moodle moodledata phpu_moodledata
