--- a/vagrant/provision_as_root.yml
+++ b/vagrant/provision_as_root.yml
@@ -127,6 +127,12 @@
         - ./composer.phar update -q
       when: composer_phar.stat.exists
 
+    - name: Install AU locale (to keep Moodle happy)
+      command: "locale-gen {{ item }}"
+      with_items:
+        - en_AU
+        - en_AU.UTF-8
+
     - name: Ensure MySQL is configured for UTF-8
       ini_file: dest=/etc/mysql/my.cnf
                 section=mysqld option={{ item.key }}
