--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    },
+    }
   },
   "plugins": [
     "react"
@@ -89,12 +89,12 @@
     "react/jsx-boolean-value": [2, "always"],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
+    "react/jsx-wrap-multilines": 2,
     "react/no-did-mount-set-state": 2,
     "react/no-did-update-set-state": 2,
     "react/no-multi-comp": 2,
     "react/no-unknown-property": 2,
     "react/prop-types": 2,
-    "react/self-closing-comp": 2,
-    "react/wrap-multilines": 2
+    "react/self-closing-comp": 2
   }
 }
