--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,39 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-cffi==1.8.3               # via cryptography
-cryptography==1.5.2       # via pyopenssl
+cffi==1.9.1               # via cryptography
+cryptography==1.7.1       # via pyopenssl
 django-braces==1.10.0     # via django-oauth-toolkit
 django-classy-tags==0.8.0  # via django-cms, django-sekizai
 django-cms==3.4.1
 django-common-helpers==0.9.0  # via django-cron
 django-cron==0.5.0
 django-formtools==1.0     # via django-cms
-django-js-reverse==0.7.2
-django-mptt==0.8.6
+django-js-reverse==0.7.3
+django-mptt==0.8.7
 django-oauth-toolkit==0.9.0
 django-sekizai==0.10.0    # via django-cms
-django-treebeard==4.0.1   # via django-cms
-django==1.8.15
-djangocms-admin-style==1.2.6  # via django-cms
-djangocms-style==1.7.0
-djangocms-text-ckeditor==3.3.0
-djangorestframework==3.5.2
+django-treebeard==4.1.0   # via django-cms
+django==1.8.17
+djangocms-admin-style==1.2.6.2  # via django-cms
+djangocms-attributes-field==0.1.2  # via djangocms-style
+djangocms-style==2.0.1
+djangocms-text-ckeditor==3.3.1
+djangorestframework==3.5.3
 enum34==1.1.6             # via cryptography
 html5lib==0.9999999       # via djangocms-text-ckeditor
-idna==2.1                 # via cryptography
+idna==2.2                 # via cryptography
 ipaddress==1.0.17         # via cryptography
 mysqlclient==1.3.9
 ndg-httpsclient==0.4.2
 oauthlib==1.0.1           # via django-oauth-toolkit
-Pillow==3.4.2             # via djangocms-text-ckeditor
+olefile==0.43             # via pillow
+Pillow==4.0.0             # via djangocms-text-ckeditor
 psycopg2==2.6.2
 pyasn1==0.1.9             # via cryptography
 pycparser==2.17           # via cffi
 pyopenssl==16.0.0
-requests==2.11.1
+requests==2.12.4
 six==1.10.0               # via cryptography, django-oauth-toolkit, html5lib, pyopenssl
 unipath==1.1
 
